# CalaWorkshop

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  README.md  build-logs.remove.txt  compose.aio.example.yml  compose.workshop.yml
.github/workflows/: ci.yml  release.yml  test-image.yml
docs/: ARCHITECTURE.md  DEPLOY.md  GAME_PRESETS.md  advanced-rule.example.json  games.example.json
extension/: Metadata.toml
extension/backend/: Cargo.toml
extension/backend/src/: helper.rs  lib.rs  registry.rs  settings.rs  steam.rs  steam_links.rs  validation.rs
extension/backend/src/routes/: mod.rs
extension/backend/src/routes/admin/: mod.rs  settings.rs
extension/backend/src/routes/server/: collections.rs  config.rs  installed.rs  mod.rs  search.rs
extension/backend/src/routes/server/downloads/: mod.rs
extension/backend/src/routes/server/downloads/_download_/: install.rs  mod.rs
extension/backend/src/routes/user/: mod.rs
extension/backend/src/routes/user/steam/: _label_.rs  mod.rs
extension/frontend/: package.json
extension/frontend/src/: index.tsx
extension/migrations/20260606000000_init/: down.sql  up.sql
extension/migrations/20260607000000_registry/: down.sql  up.sql
extension/migrations/20260608000000_steam_links/: down.sql  up.sql
extension/migrations/20260609000000_post_install/: down.sql  up.sql
helper/: .dockerignore  Cargo.toml  Dockerfile  README.md
helper/src/: config.rs  main.rs  routes.rs  state.rs  steamcmd.rs
packaging/: build-c7s.ps1  build-c7s.sh
(+22 files in other folders)
