[package]
name = "calaworkshop-helper"
version = "0.2.1"
edition = "2021"
description = "SteamCMD helper microservice for the Calagopus calaworkshop extension"
license = "MIT"

[[bin]]
name = "calaworkshop-helper"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
zip = "2"
anyhow = "1"

[profile.release]
strip = true
