[package]
name = "dev_wasian_calaworkshop"
description = "Steam Workshop downloader for Calagopus — paste or search Workshop items and install them onto a server via SteamCMD + Wings."
authors = ["wasian"]
version = "0.2.2"
edition = { workspace = true }

[dependencies]
shared = { workspace = true }
wings-api = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
garde = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
compact_str = { workspace = true }
reqwest = { workspace = true }
base32 = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
sqlx = { workspace = true }
